# ai-regression-guard

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ci/github_action/: action.yml
cli/: __init__.py  main.py
cloud/: __init__.py  client.py
core/: __init__.py  baselines.py  judge_cache.py  regressions.py  scoring.py
examples/: cases.json  cases_bad.json  ci_example.yml  simple_prompt.py  suite.json  suite_semantic.json
examples/demo_repo/: README.md  suite_semantic.json
examples/demo_repo/.baselines/: customer-support-agent-v1.json
examples/demo_repo/.github/workflows/: ai-quality-gate.yml
providers/: __init__.py  anthropic_provider.py  base.py  fake.py  openai_provider.py
tests/: test_cli.py  test_cloud.py  test_evals.py  test_per_case_reporting.py  test_providers.py  test_regressions.py  test_semantic_scoring.py
